force-app/main/default/objects/TRIGGER_CONTROL__c/TRIGGER_CONTROL__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Control trigger event execution. Save settings by the name of the class you want to control. If no record exists, all trigger events are considered as enabled</description>
    <label>TRIGGER CONTROL</label>
</CustomObject>