force-app/main/default/objects/TRIGGER_CONTROL__c/fields/AFTER_DELETE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_DELETE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to turn off AFTER DELETE</inlineHelpText>
    <label>AFTER_DELETE</label>
    <type>Checkbox</type>
</CustomField>