force-app/main/default/objects/TRIGGER_CONTROL__c/fields/AFTER_INSERT__c.field-meta.xml
<CustomField>
    <fullName>AFTER_INSERT__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable AFTER INSERT</inlineHelpText>
    <label>AFTER_INSERT</label>
    <type>Checkbox</type>
</CustomField>