force-app/main/default/objects/TRIGGER_CONTROL__c/fields/AFTER_UNDELETE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_UNDELETE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable AFTER UNDELETE</inlineHelpText>
    <label>AFTER_UNDELETE</label>
    <type>Checkbox</type>
</CustomField>