force-app/main/default/objects/TRIGGER_CONTROL__c/fields/AFTER_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_UPDATE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable AFTER UPDATE</inlineHelpText>
    <label>AFTER_UPDATE</label>
    <type>Checkbox</type>
</CustomField>