force-app/main/default/objects/TRIGGER_CONTROL__c/fields/BEFORE_DELETE__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_DELETE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable BEFORE DELETE</inlineHelpText>
    <label>BEFORE_DELETE</label>
    <type>Checkbox</type>
</CustomField>