force-app/main/default/objects/TRIGGER_CONTROL__c/fields/BEFORE_INSERT__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_INSERT__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable BEFORE_INSERT</inlineHelpText>
    <label>BEFORE_INSERT</label>
    <type>Checkbox</type>
</CustomField>