force-app/main/default/objects/TRIGGER_CONTROL__c/fields/BEFORE_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_UPDATE__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to disable BEFORE UPDATE</inlineHelpText>
    <label>BEFORE_UPDATE</label>
    <type>Checkbox</type>
</CustomField>